--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
                 <div class="col-lg-4 col-md-6">
                     <div class="card card-row" style="width: 18rem;">
-                        <video class="card-img-top" alt="Card image cap" loop autoplay>
+                        <video class="card-img-top" alt="Card image cap" loop autoplay muted>
                             <source src="images/coder.mp4" type="video/mp4">
                             <source src="movie.ogg" type="video/ogg">
                         </video>
